# Kepler

./: .gitignore  CMakeLists.txt  ORIGINALITY-AVOWAL  README.md  good to know.txt
.github/workflows/: cmake.yml  linux.yml
bak/: CharacterSet.h  Lexer.cpp  Lexer.h  Token.cpp  Token.h  Types.h  UnicodeCharacter.cpp  UnicodeCharacter.h  UnicodeString.cpp  UnicodeString.h
bak/sequence/: AtomicStep.cpp  AtomicStep.h  Sequence.cpp  Sequence.h  SequenceBuilder.cpp  SequenceBuilder.h  SequenceStep.cpp  SequenceStep.h  Step.h
benchmarking/: benchmarks.cpp  cpp_runners.h  d.apl  dyalog.apl  dyalog.apls  hwinfo-cpu.txt  instructions  kepler_benchmark.cpp  kepler_fixture.h
benchmarking/files/degrees/: degrees1.kpl  degrees10000.kpl  degrees100000.kpl
benchmarking/files/fact/: fact1.kpl  fact10.kpl  fact100.kpl  fact1000.kpl  fact10000.kpl  fact2.kpl  fact4.kpl  fact8.kpl
benchmarking/files/fib/: fib1.kpl  fib10.kpl  fib100.kpl  fib1000.kpl  fib10000.kpl
benchmarking/files/iota/: iota10.kpl  iota1000.kpl  iota10000000.kpl  iota100000000.kpl
benchmarking/files/life/: life100.kpl  life1000.kpl
benchmarking/files/mandelbrot/: mandelbrot10.kpl  mandelbrot100.kpl  mandelbrot1000.kpl
benchmarking/results/: dyalog.txt  result_cpp_O0.json  result_kep_2_O3.json  result_kep_3_O0.json  result_kep_6_O0.json
docs/: Doxyfile
docs/benchmarking-results/: result_cpp_O3.json  result_kep_1_O3.json  result_kep_2_O0.json
docs/benchmarking-results/hardware-info/: neofetch.txt
docs/html/: algorithms_8cpp.html  algorithms_8cpp__incl.map  algorithms_8h.html  algorithms_8h.js  algorithms_8h__dep__incl.map  algorithms_8h__incl.map  algorithms_8h__incl.md5  algorithms_8h_source.html  annotated.html  annotated_dup.js  array_8cpp.html  array_8cpp__incl.map  array_8cpp__incl.md5  array_8h.html  array_8h.js  array_8h__dep__incl.map  array_8h__dep__incl.md5  array_8h__incl.map  array_8h__incl.md5  array_8h_source.html  array__printer_8cpp.html  array__printer_8cpp.js  array__printer_8cpp__incl.map  array__printer_8h.html  array__printer_8h.js  array__printer_8h__dep__incl.map  array__printer_8h__dep__incl.md5  array__printer_8h__incl.map  array__printer_8h__incl.md5  array__printer_8h_source.html  ast_8cpp.html  ast_8cpp__incl.map  ast_8cpp__incl.md5  ast_8h.html  ast_8h.js  ast_8h__dep__incl.map  ast_8h__incl.map  ast_8h__incl.md5  ast_8h_source.html  class_b_a_s_e.html  (+1207 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_d.js  classes_e.js  defines_0.js  (+80 more)
docs/latex/: algorithms_8cpp.tex  algorithms_8cpp__incl.md5  algorithms_8h.tex  algorithms_8h__dep__incl.md5  algorithms_8h__incl.md5  algorithms_8h_source.tex  annotated.tex  array_8cpp.tex  array_8cpp__incl.md5  array_8h.tex  array_8h__incl.md5  array_8h_source.tex  array__printer_8cpp.tex  array__printer_8cpp__incl.md5  array__printer_8h.tex  array__printer_8h__incl.md5  array__printer_8h_source.tex  ast_8cpp.tex  ast_8cpp__incl.md5  ast_8h.tex  ast_8h__dep__incl.md5  ast_8h_source.tex  class_b_a_s_e.tex  class_b_a_s_e__inherit__graph.md5  classfile__fixture.tex  classfile__fixture__coll__graph.md5  classfile__fixture_ae49241f7811560799cd0e8f5935de2d5_cgraph.md5  classfixture.tex  classfixture__coll__graph.md5  classfixture_a2795a43194cf7837d758d0be009fb1ef_cgraph.md5  classfixture_a62e423bc81fb340459077aae39176f5b_cgraph.md5  classifiers_8cpp.tex  classifiers_8cpp__incl.md5  classifiers_8h.tex  classifiers_8h__dep__incl.md5  classifiers_8h__incl.md5  classifiers_8h_source.tex  classkepler_1_1_parser.tex  classkepler_1_1_parser_a560313cf0bfa73b750c8eed1e3573937_icgraph.md5  classkepler_1_1_parser_acebbfa50e1c1a295aba3ac64af82294b_cgraph.md5  (+451 more)
src/: cli.h  main.cpp
src/benchmarking/: benchmarks.cpp  hwinfo.txt  sc.apls
src/benchmarking/results/: result_kep_1_O0.json  result_kep_3_O3.json  result_kep_4_O0.json  result_kep_4_O3.json  result_kep_5_O0.json  result_kep_5_O3.json  result_kep_6_O3.json
src/benchmarking/suite/: cpp_runners.h  dyalog.apls  kepler_fixture.h
src/core/: Character.cpp  Character.h  CharacterSet.h  CharacterSetNew.h  Lex.cpp  Lex.h  Lexer.cpp  Lexer.h  RegexBuilder.cpp  RegexBuilder.h  Thread.cpp  Thread.h  Token.cpp  Token.h  TokenType.cpp  TokenType.h  Types.h  Utility.cpp  Utility.h  array.cpp  array.h  array_type.h  array_types.h  characters.h  classifiers.cpp  classifiers.h  config.cpp  config.h  context.cpp  context.h  datatypes.cpp  datatypes.h  defined_function.cpp  defined_function.h  error.h  error_type.cpp  error_type.h  execution.cpp  execution.h  file_reader.h  (+20 more)
src/interface/: array_printer.cpp  array_printer.h  conversion.cpp  conversion.h  file_reader.cpp  file_reader.h
src/repl/: ascii.cpp  ascii.h  repl.cpp  repl.h  texts.h
src/testing/: fixture.cpp  fixture.h  macros.h  matcher.h  string_maker.h  test.cpp  test_datatypes.cpp  test_examples.cpp  test_functions.cpp  test_lexer.cpp  test_operators.cpp  test_parser.cpp  test_tokenizer.cpp
src/tui/: context_line.h  context_line_old.h  helpers.cpp  helpers.h  includes.h  info_bar.cpp  info_bar.h  input_line.h  keyboard.h  repl_container.h
(+203 files in other folders)
